--- a/index.html
+++ b/index.html
@@ -10,11 +10,8 @@
     <meta property="og:title" content="Hitanshu Parekh | Product Manager" />
     <meta property="og:description" content="Hitanshu Parekh - Aspiring Product Manager and Self-taught Product Enthusiast" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
